added voice api for sonic

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,8 @@ HF_TOKEN=your_huggingface_token_here
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8080
 
+#Cartesia API key
+CARTESIA_API_KEY="your_api_key_here"
+
 # Default model to preload
 DEFAULT_MODEL=rene
