--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,8 @@ python-dotenv>=1.0.0
 # Visualization (if needed)
 matplotlib>=3.5.0
 seaborn>=0.11.0
+
+#cartesia voice
+cartesia
+audioop-lts
+pydub
