--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core ML dependencies
 mlx>=0.3.0
-git+https://github.com/cartesia-ai/edge.git@main#subdirectory=cartesia-mlx  # Replace with actual version
+git+https://github.com/cartesia-ai/edge.git@main#subdirectory=cartesia-mlx  # Cartesia MLX
 
 # Server dependencies
 flask>=2.0.0
