Phases 1 and 2, and the initial parts of Phase 3 for the Cartesia Mobile PWA. This includes setting up the Svelte project, basic UI, backend API endpoint, client-side metrics collection, intelligent routing logic based on client metrics, offline request queueing, API caching, and the PWA install prompt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ git+https://github.com/cartesia-ai/edge.git@main#subdirectory=cartesia-mlx  # Ca
 # Server dependencies
 flask>=2.0.0
 jinja2>=3.0.0
+flask-cors>=4.0.0 # Added for PWA communication
 
 # Hugging Face dependencies
 huggingface-hub>=0.19.0
